link the stylesheets to sp_home.html

--- a/case1/sp_home.html
+++ b/case1/sp_home.html
@@ -13,6 +13,8 @@
    Filename: sp_home.html
    -->
    <meta charset="utf-8" />
+   <link rel="stylesheet" href="style/sp_base.css">
+   <link rel="stylesheet" href="style/sp_styles.css">
    <title>Slate &amp; Pencil Tutoring</title>
 
 </head>
