completed the window and body style

--- a/case1/sp_home.html
+++ b/case1/sp_home.html
@@ -15,6 +15,7 @@
    <meta charset="utf-8" />
    <link rel="stylesheet" href="style/sp_base.css">
    <link rel="stylesheet" href="style/sp_styles.css">
+   <link rel="stylesheet" href="style/sp_layout.css">
    <title>Slate &amp; Pencil Tutoring</title>
 
 </head>
